[package]
name = "syneroym-observability"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
metrics.workspace = true
metrics-util = { workspace = true, features = ["summary"] }
sysinfo.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
