[package]
name = "syneroym-podman-sandbox"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
syneroym-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
syneroym-bindings = { path = "../bindings" }
async-trait.workspace = true
serde_json.workspace = true
metrics.workspace = true
