[package]
name = "syneroym-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core = { path = "../core" }
syneroym-app-sandbox = { path = "../app_sandbox" }
syneroym-podman-sandbox = { path = "../podman_sandbox" }
syneroym-rpc = { path = "../rpc" }
syneroym-control-plane = { path = "../control_plane" }
syneroym-identity = { path = "../identity" }
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
iroh.workspace = true
iroh-relay.workspace = true
webrtc.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
aes-gcm.workspace = true
p256.workspace = true
rand.workspace = true
hex.workspace = true
metrics.workspace = true



[dev-dependencies]
syneroym-core = { path = "../core", features = ["test-utils"] }
criterion.workspace = true

[[bench]]
name = "preamble"
harness = false

[[bench]]
name = "crypto"
harness = false
