[package]
name = "syneroym-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Forwards to syneroym-data-blob's own `aws` feature (off by default --
# see the object_store/digest version-pin comment in the root Cargo.toml).
aws = ["syneroym-data-blob/aws"]

[dependencies]
syneroym-core.workspace = true
syneroym-sandbox-wasm.workspace = true
syneroym-sandbox-podman.workspace = true
syneroym-rpc.workspace = true
syneroym-control-plane.workspace = true
syneroym-identity.workspace = true
syneroym-data-keystore.workspace = true
syneroym-data-db.workspace = true
syneroym-data-blob.workspace = true
anyhow.workspace = true

async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
iroh.workspace = true
iroh-relay.workspace = true
webrtc.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
aes-gcm.workspace = true
p256.workspace = true
rand.workspace = true
hex.workspace = true
metrics.workspace = true
ed25519-dalek.workspace = true
quinn = "0.11.11"


[dev-dependencies]
syneroym-core = { workspace = true, features = ["test-utils"] }
criterion.workspace = true

[[bench]]
name = "preamble"
harness = false

[[bench]]
name = "crypto"
harness = false
