[package]
name = "roymctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
syneroym-identity = { workspace = true }
reqwest = { workspace = true }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
