[package]
name = "syneroym-rpc"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "framing"
harness = false
