[package]
name = "syneroym-sdk"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core = { path = "../core" }
syneroym-rpc = { path = "../rpc" }
syneroym-router = { path = "../router" }
syneroym-bindings = { path = "../bindings" }
syneroym-identity = { path = "../identity" }

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
iroh.workspace = true
async-trait.workspace = true
