[package]
name = "syneroym-sdk"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core.workspace = true
syneroym-rpc.workspace = true
syneroym-router.workspace = true
syneroym-wit-interfaces.workspace = true
syneroym-identity.workspace = true
syneroym-app-orchestration.workspace = true

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
iroh.workspace = true
async-trait.workspace = true
hex.workspace = true

[dev-dependencies]
rand.workspace = true
