[package]
name = "syneroym-smoke-tests"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core.workspace = true
syneroym-identity.workspace = true
syneroym-sdk.workspace = true
syneroym-rpc.workspace = true
syneroym-coordinator-iroh.workspace = true
syneroym-app-orchestration.workspace = true
syneroym-app-sandbox.workspace = true
syneroym-community-registry.workspace = true
syneroym-router.workspace = true
syneroym-key-store.workspace = true
syneroym-data-layer.workspace = true
syneroym-blob-store.workspace = true


anyhow.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true
clap = { workspace = true, features = ["derive"] }
iroh.workspace = true
dashmap.workspace = true
rand.workspace = true
