[package]
name = "syneroym-smoke-tests"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
syneroym-core.workspace = true
syneroym-identity.workspace = true
syneroym-sdk.workspace = true
syneroym-rpc.workspace = true
syneroym-coordinator-iroh.workspace = true
syneroym-app-orchestration.workspace = true
syneroym-sandbox-app.workspace = true
syneroym-community-registry.workspace = true
syneroym-router.workspace = true
syneroym-data-keystore.workspace = true
syneroym-data-db.workspace = true
syneroym-data-blob.workspace = true


anyhow.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true
clap = { workspace = true, features = ["derive"] }
iroh.workspace = true
dashmap.workspace = true
rand.workspace = true
